gcc/testsuite/gcc.dg/va-arg-4.c
/* { dg-do compile } */
#include <stdarg.h>
extern void baz(...);	/* { dg-error "requires a named argument" } */
